add AWS config, SQS/SNS/S3 clients, test data seeder, properties setup