@@ -3,6 +3,7 @@ package com.factoryapp.poller;
 import com.factoryapp.model.Order;
 import com.factoryapp.model.Stage;
 import com.factoryapp.repository.OrderRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
@@ -18,47 +19,30 @@ public class StageQueuePoller {
     private final SqsClient sqsClient;
     private final OrderRepository orderRepository;
 
-    // Queue URLs — will move to application properties later
-    private static final String BASE_URL = "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID";
+    @Value("${aws.account-id}")
+    private String accountId;
 
-    // Sales queues
-    private static final String SALES_RUSH   = BASE_URL + "/sales-rush-queue.fifo";
-    private static final String SALES_HIGH   = BASE_URL + "/sales-high-queue.fifo";
-    private static final String SALES_NORMAL = BASE_URL + "/sales-normal-queue.fifo";
-
-    // Line worker queues
-    private static final String LINE_RUSH    = BASE_URL + "/line-rush-queue.fifo";
-    private static final String LINE_HIGH    = BASE_URL + "/line-high-queue.fifo";
-    private static final String LINE_NORMAL  = BASE_URL + "/line-normal-queue.fifo";
-
-    // Quality queues
-    private static final String QUALITY_RUSH   = BASE_URL + "/quality-rush-queue.fifo";
-    private static final String QUALITY_HIGH   = BASE_URL + "/quality-high-queue.fifo";
-    private static final String QUALITY_NORMAL = BASE_URL + "/quality-normal-queue.fifo";
-
-    // Packer queues
-    private static final String PACKER_RUSH   = BASE_URL + "/packer-rush-queue.fifo";
-    private static final String PACKER_HIGH   = BASE_URL + "/packer-high-queue.fifo";
-    private static final String PACKER_NORMAL = BASE_URL + "/packer-normal-queue.fifo";
-
-    // Shipping queues
-    private static final String SHIPPING_RUSH   = BASE_URL + "/shipping-rush-queue.fifo";
-    private static final String SHIPPING_HIGH   = BASE_URL + "/shipping-high-queue.fifo";
-    private static final String SHIPPING_NORMAL = BASE_URL + "/shipping-normal-queue.fifo";
+    @Value("${aws.region}")
+    private String region;
 
     public StageQueuePoller(SqsClient sqsClient, OrderRepository orderRepository) {
         this.sqsClient = sqsClient;
         this.orderRepository = orderRepository;
     }
 
+    // Builds queue URL from stage and priority
+    private String queueUrl(String stage, String priority) {
+        return "https://sqs." + region + ".amazonaws.com/" + accountId + "/" + stage + "-" + priority + "-queue.fifo";
+    }
+
     // ── Poll every 5 seconds ──────────────────────────────────────────────
     @Scheduled(fixedDelay = 5000)
     public void poll() {
-        pollStage(Stage.SALES,       SALES_RUSH,    SALES_HIGH,    SALES_NORMAL);
-        pollStage(Stage.LINE_WORKER, LINE_RUSH,     LINE_HIGH,     LINE_NORMAL);
-        pollStage(Stage.QUALITY,     QUALITY_RUSH,  QUALITY_HIGH,  QUALITY_NORMAL);
-        pollStage(Stage.PACKER,      PACKER_RUSH,   PACKER_HIGH,   PACKER_NORMAL);
-        pollStage(Stage.SHIPPING,    SHIPPING_RUSH, SHIPPING_HIGH, SHIPPING_NORMAL);
+        pollStage(Stage.SALES,       queueUrl("sales", "rush"),    queueUrl("sales", "high"),    queueUrl("sales", "normal"));
+        pollStage(Stage.LINE_WORKER, queueUrl("line", "rush"),     queueUrl("line", "high"),     queueUrl("line", "normal"));
+        pollStage(Stage.QUALITY,     queueUrl("quality", "rush"),  queueUrl("quality", "high"),  queueUrl("quality", "normal"));
+        pollStage(Stage.PACKER,      queueUrl("packer", "rush"),   queueUrl("packer", "high"),   queueUrl("packer", "normal"));
+        pollStage(Stage.SHIPPING,    queueUrl("shipping", "rush"), queueUrl("shipping", "high"), queueUrl("shipping", "normal"));
     }
 
     // ── Poll Rush first, then High, then Normal ───────────────────────────
@@ -84,26 +68,20 @@ public class StageQueuePoller {
                             .build()
             ).messages();
 
-            return messages.isEmpty() ? null : messages.get(0);
+            return messages.isEmpty() ? null : messages.getFirst();
         } catch (Exception e) {
-            // Queue may not exist yet in dev — skip silently
             return null;
         }
     }
 
     // ── Process a received message ────────────────────────────────────────
     private void processMessage(Message message, Stage stage) {
-        // Parse orderId from message body
         String orderId = message.body();
 
-        // Save to DynamoDB so it appears on the worker screen
         Order order = orderRepository.findById(orderId);
         if (order != null) {
             order.setCurrentStage(stage);
             orderRepository.save(order);
         }
-
-        // Delete message from queue — worker has received it
-        // Queue URL stored in message attributes in full implementation
     }
 }
